# LSM-GNN

./: .gitmodules
gnn_example/pyg/: dataloader_pyg.py  gids_backing_write_from_bin.py  lsm_gnn_neighbor_loader.py  models_pyg.py  pyg_loader_skip_features.py  pyg_neighbor_prefetch_loader.py  requirements.txt  train_bam_pyg.py  train_bam_pyg_igb.py  verify_gids_igb_embeddings.py
gnn_example/pyg/lsm_nvme_pyg/: lsm_gnn_neighbor_loader.py  lsm_nvme_client.py  neighbor_loader_lsm_nvme.py  train_bam_pyg_igb_lsm_nvme.py  train_bam_pyg_lsm_nvme.py
gnn_example/pyg/lsm_nvme_pyg/micro_bench/: bench_update_prefetch_timestamp.py  example_pvp_buffer_walk.py  example_queue_index_map_walk.py
lsm_module/: .gitignore  CMakeLists.txt
lsm_module/examples/: bam_feature_store_example.py
lsm_module/include/lsm_module/: bam_nvme.h  device_ptr.cuh  lsm_gnn_embedded_page_cache.h  lsm_gnn_page_cache.h  lsm_gnn_window_buffer.h  lsm_nvme.h
lsm_module/python/BAM_Feature_Store/: setup.py.in
lsm_module/python/LSM_NVMe/: __init__.py  setup.py.in
lsm_module/src/: gids_nvme.cu  lsm_nvme.cu  lsm_nvme_queue_map_device.cu
